--- a/settings.json
+++ b/settings.json
@@ -3,10 +3,10 @@
 "autoplaymusic": true,
 "autocomposing": true,
 "autorecording": true,
-"NamaBot":"Fax Chan", 
-"NomorOwner":"6281523940672",
-"Mail":"fardanganteng579@gmail.com",
-"NamaOwner":"Fax", 
+"NamaBot":"Prili Chan:V", 
+"NomorOwner":"6283814160711",
+"Mail":"jannipuyw@gmail.com",
+"NamaOwner":"Pril", 
 "lolkey": "ChOkYbOT8",
 "vhtearkey": "ChOkYbOT7",
 "HelKey": "kfL8EfHc",
